[gd_scene load_steps=15 format=2]

[ext_resource path="res://nivel-3.gd" type="Script" id=1]
[ext_resource path="res://dialogo3.gd" type="Script" id=2]
[ext_resource path="res://mapas/corpo.png" type="Texture" id=3]
[ext_resource path="res://mapas/sala(1).png" type="Texture" id=4]
[ext_resource path="res://sprites/Instrutor/doutor positivo.png" type="Texture" id=5]
[ext_resource path="res://mapas/mesa.png" type="Texture" id=6]
[ext_resource path="res://mapas/ilustracao-da-lousa-verde_69037-26.jpg" type="Texture" id=7]
[ext_resource path="res://mapas/realBalao.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "sentado",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
format = 1

[node name="sala" type="Sprite" parent="TileMap"]
position = Vector2( 509.264, 304.075 )
scale = Vector2( 0.373039, 0.396145 )
texture = ExtResource( 4 )

[node name="mesa" type="Sprite" parent="."]
position = Vector2( 723.837, 507.055 )
scale = Vector2( 0.398104, 0.355193 )
z_index = 3
texture = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="Button" type="Button" parent="."]
margin_left = 236.0
margin_top = 549.0
margin_right = 339.0
margin_bottom = 595.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0.188235, 0.380392, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Leia um Livro"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PositionCadeira" type="Position2D" parent="."]
position = Vector2( 466, 494 )

[node name="nivel3buttom" type="Button" parent="."]
visible = false
margin_left = 646.396
margin_top = 540.975
margin_right = 798.396
margin_bottom = 593.975
text = "Pr√≥ximo nivel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="doutor positivo" type="Sprite" parent="."]
position = Vector2( 118.087, 441.234 )
scale = Vector2( 0.229254, 0.24394 )
texture = ExtResource( 5 )
flip_h = true

[node name="corpo" type="KinematicBody2D" parent="."]
visible = false
z_index = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="corpo"]
position = Vector2( 655.5, 487.5 )
scale = Vector2( 0.365, 0.289286 )
frames = SubResource( 6 )
animation = "sentado"

[node name="quadro" type="Sprite" parent="."]
visible = false
position = Vector2( 514, 289.5 )
scale = Vector2( 0.781132, 0.724843 )
z_index = 4
texture = ExtResource( 7 )

[node name="CheckBox" type="CheckBox" parent="quadro"]
margin_left = -442.0
margin_top = -249.701
margin_right = -333.0
margin_bottom = -223.701
rect_scale = Vector2( 5, 5 )
text = "Doido"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 242.538, 283.55 )
scale = Vector2( 0.401169, 0.25361 )
texture = ExtResource( 8 )

[node name="NinePatchRect" type="NinePatchRect" parent="Sprite"]
margin_left = -275.0
margin_top = -245.0
margin_right = 241.0
margin_bottom = 101.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Sprite/NinePatchRect"]
modulate = Color( 0.0196078, 0, 0, 1 )
margin_top = 11.1527
margin_right = 178.0
margin_bottom = 124.153
rect_scale = Vector2( 3, 3 )
text = "nivel 2"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="nivel3buttom" to="." method="_on_nivel3buttom_pressed"]
